# Nivedan

./: README.md  netlify.toml
.claude/: settings.local.json
Nivedan/: .gitignore  CLAUDE.md  generate_docs.py
Nivedan/.claude/: settings.local.json
Nivedan/backend/: .env.example  app.py  db.py  env  pyproject.toml  test_pdf.py
Nivedan/backend/models/: complaint.py
Nivedan/backend/routes/: agent.py  auth.py  complaints.py  notifications.py  webhooks.py
Nivedan/backend/services/: agent_runner.py  auth_middleware.py  form_handler.py  pdf_generator.py  sarvam.py
Nivedan/mobile/: app.json  package-lock.json  package.json
Nivedan/mobile/app/: _layout.tsx  pdf-viewer.tsx
Nivedan/mock_portal/: .env.example  .gitignore  portal_app.py  pyproject.toml  requirements.txt
Nivedan/web/: index.html  package-lock.json  package.json
civicflow/: .gitignore  CLAUDE.md  CivicFlow_Technical_Documentation.docx  README.md  generate_docs.py
civicflow/.claude/: settings.local.json
civicflow/backend/: .env.example  .gitignore  app.py  db.py  pyproject.toml  requirements.txt
civicflow/backend/models/: user.py
civicflow/backend/routes/: agent.py  auth.py  complaints.py  forms.py  notifications.py  users.py  webhooks.py
civicflow/backend/services/: agent_runner.py  pdf_generator.py  sarvam.py
civicflow/mobile/: .gitignore  app.json  package-lock.json  package.json
civicflow/mock_portal/: .env.example  portal_app.py  pyproject.toml
civicflow/mock_portal/templates/: dashboard.html
civicflow/web/: .gitignore  index.html  package-lock.json  package.json
(+89 files in other folders)
