[project]
name = "Nivedan-backend"
version = "0.1.0"
description = "Nivedan Flask API backend"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "pymongo>=4.6",
    "pyjwt>=2.8",
    "fpdf2>=2.7",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "bcrypt>=5.0.0",
    "sarvamai>=0.1.26",
    "pypdf>=4.0",
    "pillow>=12.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "vulture>=2.15",
]

[tool.uv]
package = false
