[project]
name = "civicflow-portal"
version = "0.1.0"
description = "CivicFlow mock government portal"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "pymongo>=4.6",
    "fpdf2>=2.7",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[tool.uv]
package = false
